--- a/CSS/style2.css
+++ b/CSS/style2.css
@@ -30,3 +30,29 @@ input{
     padding: 50px;
     text-align: center;
 }
+.box{
+    border-color: black;
+    border-width: 2px;
+    border-style: solid;
+    display: inline-block;
+    width: 250px;
+
+}
+.box:hover{
+    background-color: black;
+    color: aliceblue;
+}
+.products{
+    text-align: center;
+}
+.about{
+    text-align: center;
+    margin-top: 20px;
+    padding: 20px;
+}
+.contact{
+    background-color: black;
+    color: white;
+    text-align: center;
+    padding: 20px;
+}
